<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.t00553882.unitconverter.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="82dp"
        android:layout_height="29dp"
        android:layout_marginStart="19dp"
        android:text="@string/output"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintRight_toLeftOf="@+id/spinner3"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.544" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="190dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/units"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="43dp"
        android:layout_marginRight="5dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="82dp"
        android:layout_height="29dp"
        android:text="@string/input"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintRight_toLeftOf="@+id/spinner2"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="42dp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="190dp"
        android:layout_height="28dp"
        android:entries="@array/units"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="25sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_purple"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:layout_marginLeft="55dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action"
        android:layout_marginLeft="45dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.478"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.327" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="137dp"
        android:layout_height="55dp"
        android:layout_marginBottom="82dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/answer"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.961" />

</android.support.constraint.ConstraintLayout>
